<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


    <android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dimen_8dp">

            <LinearLayout
                android:id="@+id/linearLayoutForCategoryPurchase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linerLayoutSelectedNames_PC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewSetSourceName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Name"
                        android:textColor="@color/colorTextLight"/>

                    <EditText
                        android:id="@+id/editTextSourceSetName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:drawable/editbox_background_normal"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Name Of Item"
                        android:textColor="@color/colorTextLight"/>

                    <EditText
                        android:id="@+id/editTextSetItemName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:background="@android:drawable/editbox_background_normal"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dimen_3dp"
                            android:text="Quantity:"
                            android:textColor="@color/colorTextLight"/>

                        <EditText
                            android:id="@+id/edittextSetQuantity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:drawable/editbox_background_normal"
                            android:digits="0123456789"
                            android:textColor="@color/black"
                            android:inputType="number"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayoutUnits"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dimen_3dp"
                            android:text="Unit:"
                            android:textColor="@color/colorTextLight"/>

                        <EditText
                            android:id="@+id/editTextSetUnit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:drawable/editbox_background_normal"
                            android:digits="0123456789"
                            android:textColor="@color/black"
                            android:inputType="number"/>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textColor="@color/colorTextLight"/>

                    <EditText
                        android:id="@+id/editTextSetDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:textColor="@color/black"
                        android:background="@android:drawable/editbox_background_normal"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_forSupplierInOutTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="0.5"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/in_time"
                            android:textColor="@color/colorTextLight"/>

                        <EditText
                            android:id="@+id/edit_text_inTime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:textColor="@color/black"
                            android:background="@android:drawable/editbox_background_normal"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="0.5"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/out_time"
                            android:textColor="@color/colorTextLight"/>

                        <EditText
                            android:id="@+id/edit_text_outTime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:textColor="@color/black"
                            android:background="@android:drawable/editbox_background_normal"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lineraLayoutBillNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bill_number"
                        android:textColor="@color/colorTextLight"/>

                    <EditText
                        android:id="@+id/edit_text_BillNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:background="@android:drawable/editbox_background_normal"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearBillAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bill_amount"
                        android:textColor="@color/colorTextLight"/>

                    <EditText
                        android:id="@+id/edit_text_billamount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:drawable/editbox_background_normal"
                        android:digits="0123456789"
                        android:textColor="@color/black"
                        android:inputType="number"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_forSupplierVehicle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vehicle_number"
                        android:textColor="@color/colorTextLight"/>

                    <EditText
                        android:id="@+id/edit_text_vehicleNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_5dp"
                        android:textColor="@color/black"
                        android:background="@android:drawable/editbox_background_normal"/>

                </LinearLayout>



                <HorizontalScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_4dp"
                    android:fadeScrollbars="false">

                    <LinearLayout
                        android:id="@+id/linearLayoutSetUploadImage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:orientation="horizontal">
                    </LinearLayout>
                </HorizontalScrollView>



            </LinearLayout>

            <include
                android:id="@+id/layoutSetEmployeeInformation"
                layout="@layout/employee_information"
                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/linearLayoutSetGRN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grn_number"
                    android:textColor="@color/colorTextLight"/>

                <EditText
                    android:id="@+id/editTextSetGrnNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/editbox_background_normal"
                    android:enabled="false"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutSetPayableAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/payableAmount"
                    android:textColor="@color/colorTextLight"/>

                <EditText
                    android:id="@+id/editTextSetPayableAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/editbox_background_normal"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutRefNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Reference Number"
                    android:textColor="@color/colorTextLight"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/editbox_background_normal"/>
            </LinearLayout>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                >

                <EditText
                    android:id="@+id/editTextSetRemark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFD740"
                    android:hint="@string/tap_too_add_note"
                    android:padding="@dimen/dimen_16dp"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/dimen_16dp"/>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>