<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
<!--
    peticash_transaction_id": 2,
    "employee_name": "Test labour",
    "project_site_name": "Konark Orchid School",
    "amount": "3000",
    "payable_amount": null,
    "reference_user_name": "Super Admin ",
    "date": "Thursday, 02 November 2017",
    "days": "15",
    "remark": "test advance ",
    "admin_remark": "",
    "peticash_transaction_type": "Salary",
    "peticash_status_name": "Pending",
    "payment_type": "Peticash",
    "list_of_images": [
    {
    "image_url": null
    }-->
    <android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dimen_8dp">

            <LinearLayout
                android:id="@+id/linerLayoutSetSelectedNames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/setStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="status"
                    android:layout_gravity="right"
                    android:textColor="@color/colorAccent"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Employee Id/Name :"
                    android:textColor="@color/colorTextLight"/>

                <EditText
                    android:id="@+id/edittextSetEmpName"
                    android:layout_width="match_parent"
                    android:enabled="false"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/editbox_background_normal"
                    android:focusable="false"/>
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="@color/colorTextLight"/>

                <EditText
                    android:id="@+id/editTextSetSalaryDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:background="@android:drawable/editbox_background_normal"
                    android:focusable="false"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearSetLayoutForSalary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:visibility="gone"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dimen_3dp"
                        android:text="Wedges:"
                        android:textColor="@color/colorTextLight"/>

                    <EditText
                        android:id="@+id/edittextWeihges"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:drawable/editbox_background_normal"
                        android:digits="0123456789"
                        android:enabled="false"
                        android:inputType="number"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dimen_3dp"
                        android:text="Days:"
                        android:textColor="@color/colorTextLight"/>

                    <EditText
                        android:id="@+id/edittextSetDay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:drawable/editbox_background_normal"
                        android:digits="0123456789."
                        android:enabled="false"
                        android:inputType="number"/>


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amount"
                    android:textColor="@color/colorTextLight"/>

                <EditText
                    android:id="@+id/editTextSetSalaryAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:background="@android:drawable/editbox_background_normal"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearPayableAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/payableAmount"
                    android:textColor="@color/colorTextLight"/>

                <EditText
                    android:id="@+id/edittextSetPayableAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:background="@android:drawable/editbox_background_normal"/>
            </LinearLayout>


            <HorizontalScrollView
                android:id="@+id/horizontalImages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_4dp"
                android:visibility="gone"
                android:fadeScrollbars="false">

                <LinearLayout
                    android:id="@+id/linearLayoutSetImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">
                </LinearLayout>
            </HorizontalScrollView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                >

                <EditText
                    android:id="@+id/editTextSetSalaryRemark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFD740"
                    android:hint="@string/tap_too_add_note"
                    android:padding="@dimen/dimen_16dp"
                    android:enabled="false"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/dimen_16dp"/>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>